--- a/pom.xml
+++ b/pom.xml
@@ -95,9 +95,21 @@
         </dependency>
 
         <dependency>
+            <groupId>com.dorkbox</groupId>
+            <artifactId>SystemTray</artifactId>
+            <version>4.1</version>
+        </dependency>
+
+        <dependency>
+          <groupId>com.dorkbox</groupId>
+          <artifactId>Notify</artifactId>
+          <version>3.7</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.fazecast</groupId>
             <artifactId>jSerialComm</artifactId>
-            <version>2.7.0</version>
+            <version>2.8.2</version>
         </dependency>
     </dependencies>
 </project>
