--- a/pom.xml
+++ b/pom.xml
@@ -94,17 +94,17 @@
             <version>1.5.0</version>
         </dependency>
 
-        <dependency>
-            <groupId>com.dorkbox</groupId>
-            <artifactId>SystemTray</artifactId>
-            <version>4.1</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.dorkbox</groupId>-->
+<!--            <artifactId>SystemTray</artifactId>-->
+<!--            <version>4.1</version>-->
+<!--        </dependency>-->
 
-        <dependency>
-          <groupId>com.dorkbox</groupId>
-          <artifactId>Notify</artifactId>
-          <version>3.7</version>
-        </dependency>
+<!--        <dependency>-->
+<!--          <groupId>com.dorkbox</groupId>-->
+<!--          <artifactId>Notify</artifactId>-->
+<!--          <version>3.7</version>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>com.fazecast</groupId>
